# openssl_learn

./: CMakeLists.txt
data/: chain.pem  client_cert.p12  client_cert.pem  client_cert_2.p12  client_cert_2.pem  client_chain.pem  client_keypair.pem  client_keypair_2.pem  fixed_server_cert.pem  fixed_server_keypair.pem  intermediate1_cert.pem  intermediate1_keypair.pem  intermediate2_cert.pem  intermediate2_keypair.pem  leaf_cert.pem  leaf_keypair.pem  root_cert.pem  root_keypair.pem  rsa_keypair.pem  rsa_public_key.pem  server_cert.pem  server_keypair.pem  src.txt
mini-ca/client/: certfile.pem  client.cnf  client_cert.p12  client_cert.pem  client_csr.pem
mini-ca/client/private/: client_keypair.pem
mini-ca/ocsp/: ocsp.cnf  ocsp_csr.pem
mini-ca/ocsp/private/: ocsp_keypair.pem
mini-ca/root/: index.txt  index.txt.old  root.cnf  root_csr.pem
mini-ca/root/issued/: 136519B06FF936754F791C34DFEFC6441627D2AA.pem  501BA2B23546ECFE360D58D22EE2D6D8AE58F02C.pem
mini-ca/root/private/: root_keypair.pem
mini-ca/server/: server.cnf  server_csr.pem
mini-ca/server/private/: server_keypair.pem
mini-ca/server2/: server2.cnf  server2_csr.pem
mini-ca/server2/private/: server2_keypair.pem
src/: hmac.cpp  init.cpp  pbkdf.cpp  verify.cpp
src/client/: CMakeLists.txt  client.cpp  help_func.cpp  help_func.h
src/crypt/: CMakeLists.txt  main.cpp
src/decrypt/: CMakeLists.txt  main.cpp
src/include/: algorithm_info.h  common_defs.h  crypt.h  decrypt.h  path.h
src/libs/: CMakeLists.txt
src/libs/algorithm_info/: CMakeLists.txt  algorithm_info.cpp
src/libs/crypt/: CMakeLists.txt  crypt.cpp
src/libs/decrypt/: CMakeLists.txt  decrypt.cpp
src/server/: CMakeLists.txt  server.cpp
